--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -2,7 +2,7 @@
 /* Global Styles */
 @font-face {
     font-family: 'Ubuntu';
-    src: url('../fonts/UbuntuMono-R.ttf');
+    src: url('../fonts/Voltaire-Regular.ttf');
 }
 
 * {
@@ -17,6 +17,9 @@ html, body {
 
 a {
     color: #c3e791;
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
 }
 
 a:focus{
@@ -27,13 +30,29 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 0px;
 }
 
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 34px;
+}
+
+h3 {
+    font-size: 28px;
+}
+
+li, a, span, p {
+    font-size: 24px;
+}
+
 button{
-    padding: 5px;
+    padding: 15px;
     color: #c3e791;
     background-color: #161819;
     border: 1px solid #86c232;
     font: 'Ubuntu';
-    font-size: 14px;
+    font-size: 24px;
     width: 100%;
     box-sizing: border-box;
 }
@@ -62,8 +81,13 @@ button:focus{
     margin-bottom: 40px;
 }
 
-#last-container, #first-container{
-    padding-bottom: 10px;
+#last-container {
+    padding-bottom: 50px;
+    margin-bottom: 0px !important;
+}
+
+#first-container{
+    padding-bottom: 30px;
 }
 /* ============================================================ */
 
