--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -67,6 +67,32 @@ button:focus{
 /* ============================================================ */
 
 /* ============================================================ */
+/* Table of Contents */
+#table-of-contents {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#table-of-contents a, #table-of-contents li {
+    font-size: 1.1em;
+}
+/* ============================================================ */
+
+/* ============================================================ */
+/* Footer */
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 30px 0px 30px 0px;
+    background-color: #161819;
+}
+/* ============================================================ */
+
+/* ============================================================ */
 /* Content */
 #content-column {
     width: 60%;
@@ -74,6 +100,7 @@ button:focus{
     border-left: 5px solid #86c232;
     border-right: 5px solid #86c232;
     color: #AAAEB3;
+    margin-bottom: 50px;
 }
 
 .content-container {
