--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -101,6 +101,7 @@ button:focus{
     border-right: 5px solid #86c232;
     color: #AAAEB3;
     margin-bottom: 50px;
+    box-sizing: border-box;
 }
 
 .content-container {
@@ -171,7 +172,7 @@ button:focus{
 
 @media screen and (max-width: 700px){
     #content-column{
-        width: 90%;
+        width: 100%;
         margin-bottom: 35px;
     }
 
